--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': 'Bearer '
+                    'Authorization': 'Bearer ${api_key}'
                 },
                 body: JSON.stringify({
                     "model": "text-davinci-003",
